# alpiNES

./: .gitignore  Cargo.toml
rom/: donkey_kong_jump.txt
rom/mapper0/: mario_bros.nes
rom/mapper1/: chessmaster.nes
rom/mapper66/: doraemon.nes
rom/test/cpu/reference/: nestest.reflog
src/: cpu.rs  emu.rs  io.rs  lib.rs  logger.rs  main.rs  mem.rs  nes.rs  ppu.rs  rom.rs  util.rs
src/io/: bitvec.rs  rom.rs
src/nes/: apu.rs  cpu.rs  io.rs  mem.rs  ppu.rs  rom.rs
src/nes/apu/: registers.rs
src/nes/apu/registers/: dmc.rs  frame_counter.rs  noise.rs  pulse.rs  status.rs  triangle.rs
src/nes/cpu/: mem.rs  registers.rs
src/nes/cpu/registers/: status.rs
src/nes/io/: frame.rs  joycon.rs  viewport.rs
src/nes/io/joycon/: joycon_status.rs
src/nes/ppu/: mem.rs  oam.rs  registers.rs  sprite.rs
src/nes/ppu/registers/: addr.rs  ctrl.rs  mask.rs  scroll.rs  scrollctx.rs  stat.rs  status.rs
src/nes/rom/: mappers.rs  registers.rs
src/nes/rom/mappers/: mapper.rs  mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper66.rs
src/nes/rom/registers/: shift.rs
src/util/: audio.rs  logger.rs  rom.rs  savestate.rs  sleep.rs
tests/: integration_test.rs
